fix contact spacing and add footer links

--- a/src/styles/Contact.scss
+++ b/src/styles/Contact.scss
@@ -1,6 +1,6 @@
 .deacon__contact {
     width: 100%;
-    margin-top: 40px;
+    margin-top: 60px;
 
     @include for-mobile {
         width: 90%;
